--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/5. XEOS方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/5. XEOS方式上传组件的使用.md
@@ -13,3 +13,9 @@ a）您需要拥有“接口管理”模块的权限。
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 4.5.3 操作步骤
+
+a）在窗体视图左侧的“组件列表”中“文件”栏目下，找到XEOS方式上传组件，拖至窗体视图，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_7_1.png)
+
+##### 图5-1 找到XEOS方式上传组件
