--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/5. XEOS方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/5. XEOS方式上传组件的使用.md
@@ -19,3 +19,9 @@ a）在窗体视图左侧的“组件列表”中“文件”栏目下，找到X
 ![5-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_7_1.png)
 
 ##### 图5-1 找到XEOS方式上传组件
+
+b）为显示效果，同时选择一个输出结果组件，拖至窗体视图，连接好组件的流程图，如图5-2所示：
+
+![5-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_7_2.png)
+
+##### 图5-2 连接组件流程图
