--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/5. XEOS方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/5. XEOS方式上传组件的使用.md
@@ -39,3 +39,11 @@ d）单击“XEOS上传信息”处未选中记录方框，进入填写数据页
 ##### 图5-4 配置XEOS上传信息
 
 e）在填写数据页面，单击“资源实例名称”处的选择记录方框，选择已连好的XEOS资源，如图5-5所示：
+
+![5-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_7_5.png)
+
+##### 图5-5 选择资源实例
+
+f）在“文件”处设置需上传的文件，如图5-6所示：
+
+![5-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_7_6.png)
