--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/5. XEOS方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/5. XEOS方式上传组件的使用.md
@@ -55,3 +55,9 @@ f）在“文件”处设置需上传的文件，如图5-6所示：
 ![5-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_5_1.png)
 
 ##### 图5-7 创建file参数
+
+![5-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_7_7.png)
+
+##### 图5-8 选择流程变量
+
+g）设置文件上传后是否删除，配置完成后，单击“确定”，退出填写数据页面。
