--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/5. XEOS方式上传组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/5. XEOS方式上传组件的使用.md
@@ -61,3 +61,9 @@ f）在“文件”处设置需上传的文件，如图5-6所示：
 ##### 图5-8 选择流程变量
 
 g）设置文件上传后是否删除，配置完成后，单击“确定”，退出填写数据页面。
+
+h）选中“输出结果”组件，单击“响应结果”处的三等号，进入选择数据页面，如图5-9所示：
+
+![5-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_7_8.png)
+
+##### 图5-9 配置响应结果
