--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/6. XEOS方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/6. XEOS方式下载组件的使用.md
@@ -11,3 +11,11 @@
 a）您需要拥有“接口管理”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 4.6.3 操作步骤
+
+a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“文件”栏目下，找到XEOS方式下载组件，拖至窗体视图，如图6-1所示：
+
+![6-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_8_1.png)
+
+##### 图6-1 找到XEOS方式下载组件
