--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/6. XEOS方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/6. XEOS方式下载组件的使用.md
@@ -31,3 +31,11 @@ c）单击“XEOS下载信息”处未选中记录方框，进入填写数据页
 ![6-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_8_3.png)
 
 ##### 图6-3 配置XEOS下载信息
+
+d）在填写数据页面，单击“资源实例名称”处的选择记录方框选择已接好的XEOS资源，如图6-4所示：
+
+![6-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_8_4.png)
+
+##### 图6-4 选择资源实例
+
+e）设置文件的下载路径，如图6-5所示：
