--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/6. XEOS方式下载组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/6. XEOS方式下载组件的使用.md
@@ -43,3 +43,11 @@ e）设置文件的下载路径，如图6-5所示：
 ![6-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_8_5.png)
 
 ##### 图6-5 设置下载路径
+
+##### 说明：文件的下载路径可以根据项目需求，通过选择流程变量、选择函数结果或直接输入值的方式来设置。
+
+f）选择下载结果返回方式，可根据项目需求选择“直接下载”或“返回流对象”，如图6-6所示：
+
+![6-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_4_8_6.png)
+
+##### 图6-6 选择下载结果返回方式
