--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/7. 导出Excel组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/7. 导出Excel组件的使用.md
@@ -17,3 +17,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“文件”栏目下，找到XEOS方式下载组件，拖至窗体视图，如图6-1、图6-2所示：
 
 ![6-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_3_1_02.png)
+
+##### 图6-1 找到导出Excel组件
+
+![6-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_3_1_03.png)
+
+##### 图6-2 连接组件流程图
+
+b）选中“导出Excel组件”，根据项目需求填写“导出Excel组件”的名称和描述，如图6-3所示：
+
+![6-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_3_1_04.png)
