--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
@@ -1,1 +1,9 @@
-test
+### 4. 文件组件
+
+#### 4.8 数据导出Excel组件的使用
+
+##### 4.8.1 数据导出Excel组件
+
+数据导出Excel组件是导出Excel组件的升级版，用于导出自行创建的Excel文件。导出的Excel文件中可创建多个表单，并自行设置表单名、标题集合和记录集合。本节将通过具体实例来介绍数据导出Excel组件的使用。
+
+##### 4.8.2 案例介绍
