--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
@@ -7,3 +7,15 @@
 数据导出Excel组件是导出Excel组件的升级版，用于导出自行创建的Excel文件。导出的Excel文件中可创建多个表单，并自行设置表单名、标题集合和记录集合。本节将通过具体实例来介绍数据导出Excel组件的使用。
 
 ##### 4.8.2 案例介绍
+
+本节案例需实现导出一张具有两张表单的Excel表，第一张表单的名称为“学生总数”，标题字段为“总数”，第二张表单的名称为“学生信息”，标题字段为“学号”和“姓名”，如图8-1、8-2所示：
+
+![8-1](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/2.png)
+
+##### 图8-1 学生总数表单
+
+![8-2](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/3.png)
+
+##### 图8-2 学生信息表单
+
+##### 4.8.3 流程图展示
