--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
@@ -19,3 +19,13 @@
 ##### 图8-2 学生信息表单
 
 ##### 4.8.3 流程图展示
+
+![8-3](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/1.png)
+
+##### 图8-3 流程图展示
+
+逻辑描述：
+
+a）通过单SQL组件查询学生总数，获取第一张表单里的记录，数据类型为List< Map>。
+
+b）通过单SQL组件查询学生信息，获取第二张表单里的记录，数据类型为List< Map>。
