--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
@@ -29,3 +29,13 @@
 a）通过单SQL组件查询学生总数，获取第一张表单里的记录，数据类型为List< Map>。
 
 b）通过单SQL组件查询学生信息，获取第二张表单里的记录，数据类型为List< Map>。
+
+c）为两张表单里的标题字段赋值。
+
+d）将获取的学生总数记录的数据类型由List< Map>转换为List< String>。
+
+e）将获取的学生信息记录的数据类型由List< Map>转换为List< String>。
+
+f）利用数据导出Excel组件将Excel文件导出。
+
+##### 4.8.3 前提条件
