--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
@@ -39,3 +39,13 @@ e）将获取的学生信息记录的数据类型由List< Map>转换为List< Str
 f）利用数据导出Excel组件将Excel文件导出。
 
 ##### 4.8.3 前提条件
+
+a）数据库中准备好学生表的数据。
+
+b）利用接口生成器生成查询学生表相关的SQL语句，详情可参见[《SoFlu社区版快速入门教程第4.10节：如何自动生成SQL信息》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#410-%E5%A6%82%E4%BD%95%E8%87%AA%E5%8A%A8%E7%94%9F%E6%88%90sql%E4%BF%A1%E6%81%AF)。
+
+##### 4.8.4 操作步骤
+
+a）进入实体模型功能模块，新增一个实体模型。该实体模型作为需导出的两张表单的标题字段集合，用于之后流程图编辑中对标题字段进行赋值，具体配置如图8-4所示，其中oneTitle表示第一张表单的标题字段、twoTitle表示第二张表单的标题字段。
+
+![8-4](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/4.png)
