--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
@@ -79,3 +79,13 @@ d1）单SQL组件【查询学生总数】：用于查询学生表中学生记录
 ![8-9](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/9.png)
 
 ##### 图8-9 填写数据
+
+d2）单SQL组件【查询学生信息】：用于查询学生表中的学生信息数据，故组件配置中SQL名称选择list_Xuesheng，其他信息可选填，如图8-10、图8-11所示：
+
+![8-10](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/11.png)
+
+##### 图8-10 查询学生信息组件
+
+![8-11](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/12.png)
+
+##### 图8-11 填写数据
