--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
@@ -89,3 +89,13 @@ d2）单SQL组件【查询学生信息】：用于查询学生表中的学生信
 ![8-11](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/12.png)
 
 ##### 图8-11 填写数据
+
+![8-12](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/10.png)
+
+##### 图8-12 SQL参数详情
+
+d3）赋值组件【标题赋值】：用于为需导出Excel文件中两张表单的标题字段进行赋值，其中实体模型选择TitleList，再根据表单的实际情况进行赋值，如图8-12、图8-13所示：
+
+![8-12](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/14.png)
+
+##### 图8-12 标题赋值组件
