--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
@@ -129,3 +129,15 @@ d5）单函数【学生信息类型转换】：用于将单SQL组件【查询学
 ##### 图8-18 填写数据
 
 d6）数据导出Excel组件【导出Excel文件学生信息】：用于引用以上组件的执行结果，将Excel文件导出，Excel文件名称及Excel文件中各表单的表单页、表单名根据实际情况进行填写，如图8-19、图8-20所示：
+
+![8-19](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/21.png)
+
+##### 图8-19 导出Excel文件学生信息组件
+
+![8-20](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/22.png)
+
+##### 图8-20 填写数据
+
+e）接口的流程图设计完成之后，保存并退出。
+
+f）提交并发布接口。
