--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/4. 文件组件/8. 数据导出Excel组件的使用.md
@@ -153,3 +153,13 @@ h）选择对应的接口，选择调试页签，如图8-22所示：
 ![8-22](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/24.png)
 
 ##### 图8-22 选择调试页签
+
+i）单击发送即可进行接口的调试，可以看到需导出的文件在页面下方显示，说明接口功能正常，如图8-23、图8-24所示：
+
+![8-23](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/25.png)
+
+##### 图8-23 点击发送
+
+![8-24](https://www.feisuanyz.com/fsimage/zc-image/zjsy/dataexportexcel/26.png)
+
+##### 图8-24 接口功能正常
