--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/1. 互斥条件组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/1. 互斥条件组件的使用.md
@@ -5,3 +5,13 @@
 ##### 5.1.1 互斥条件组件
 
 系统提供该功能，您可以使用互斥条件组件实现不同条件的逻辑判断，类似于写代码的if、switch、for操作。
+
+##### 5.1.2 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 5.1.3 操作步骤
+
+a）单击已创建接口模块的“+”加号按钮，选择“新增接口”，如图1-1所示：
