--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/1. 互斥条件组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/1. 互斥条件组件的使用.md
@@ -15,3 +15,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 ##### 5.1.3 操作步骤
 
 a）单击已创建接口模块的“+”加号按钮，选择“新增接口”，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_1.png)
+
+##### 图1-1 新增接口
+
+b）填写接口的基本信息，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_2.png)
+
+##### 图1-2 填写接口基本信息
