--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/1. 互斥条件组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/1. 互斥条件组件的使用.md
@@ -25,3 +25,11 @@ b）填写接口的基本信息，如图1-2所示：
 ![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_2.png)
 
 ##### 图1-2 填写接口基本信息
+
+c）配置接口的入口参数，配置完成后单击“提交”，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_3.png)
+
+##### 图1-3 配置入口参数
+
+##### 说明：为演示互斥条件组件的功能，此处配置两个整型变量x、y，以便后续进行变量间的逻辑判断，如图1-4所示：
