--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/1. 互斥条件组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/1. 互斥条件组件的使用.md
@@ -43,3 +43,11 @@ d）进入模型页面，单击“进入模型编辑”，如图1-5所示：
 ![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_5.png)
 
 ##### 图1-5 模型页面
+
+e）进入窗体视图，在左侧组件列表的“基础”栏目下，找到互斥条件组件，将其拖拽至画布，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_1_6.png)
+
+##### 图1-6 找到互斥条件组件
+
+f）同时选择两个输出结果组件，拖拽至画布，连接好组件的流程图，如图1-7所示：
