--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/2. 包容性条件组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/2. 包容性条件组件的使用.md
@@ -1,1 +1,11 @@
-test
+### 5. 条件组件
+
+#### 5.2 包容性条件组件的使用
+
+##### 5.2.1 包容性条件组件
+
+系统提供该功能，您可以在系统中利用包容性条件组件进行可视化开发。包容性条件组件可以看做是互斥条件组件和并行条件组件的组合，和互斥条件组件一样，您可以在外出顺序流上定义条件，包容性条件组件会解析它们，然而主要的区别是包容性条件组件和并行条件组件一样，可以选择多于一条顺序流执行（即：若有a、b、c三条流程，其中a和b都满足条件，这时可执行的流程为a、b两条）
+
+##### 5.2.2 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
