--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/2. 包容性条件组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/2. 包容性条件组件的使用.md
@@ -9,3 +9,13 @@
 ##### 5.2.2 前提条件
 
 a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 5.2.3 操作步骤
+
+a）在窗体视图左侧的“组件列表”中，找到“包容性条件”组件，拖拽至绘图面板，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_3_1.png)
+
+##### 图1-1 找到“包容性条件”组件
