--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/3. 并行条件组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/3. 并行条件组件的使用.md
@@ -1,1 +1,9 @@
-test
+### 5. 条件组件
+
+#### 5.3 并行条件组件的使用
+
+##### 5.3.1 并行条件组件
+
+系统提供该功能，您可以在系统中利用并行条件组件进行可视化开发，并行条件组件允许将流程分成多条分支，也可以把多条分支汇聚到一起，同时并行条件组件不需要设置流程变量。
+
+##### 5.3.2 前提条件
