--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/3. 并行条件组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/3. 并行条件组件的使用.md
@@ -7,3 +7,13 @@
 系统提供该功能，您可以在系统中利用并行条件组件进行可视化开发，并行条件组件允许将流程分成多条分支，也可以把多条分支汇聚到一起，同时并行条件组件不需要设置流程变量。
 
 ##### 5.3.2 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 5.3.3 操作步骤
+
+a）进入流程编辑页面，在窗体视图左侧的“组件列表”中，找到并行条件组件，拖拽至绘图面板，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_1.png)
