--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/3. 并行条件组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/3. 并行条件组件的使用.md
@@ -17,3 +17,11 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 a）进入流程编辑页面，在窗体视图左侧的“组件列表”中，找到并行条件组件，拖拽至绘图面板，如图1-1所示：
 
 ![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_1.png)
+
+##### 图1-1 找到并行条件组件
+
+b）选中并行条件组件，填写组件的基本信息，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_2.png)
+
+##### 图1-2 填写组件的基本信息
