--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/3. 并行条件组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/5. 条件组件/3. 并行条件组件的使用.md
@@ -25,3 +25,13 @@ b）选中并行条件组件，填写组件的基本信息，如图1-2所示：
 ![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_2.png)
 
 ##### 图1-2 填写组件的基本信息
+
+c）同时选择三个“单函数”组件、一个“输出结果”组件以及一个“包容性条件”组件，拖拽至绘图面板，连接好组件的流程图，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_2_2_3.png)
+
+##### 图1-3 连接组件流程图
+
+##### 说明：并行条件组件不需要设置流程变量，连接并行条件组件的每个流程分支都是必走的，类似于多线程，其中每个流程分支走完需要合并流程，这时可以使用一个包容性条件组件将流程重新合并在一个流程中以便继续执行接下来的流程。
+
+d）选中一个“单函数”组件，根据项目需求填写单函数的名称和描述，如图1-4所示：
