--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/1. Kafka消费者组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/1. Kafka消费者组件的使用.md
@@ -1,1 +1,11 @@
-test
+### 6. 消息队列组件
+
+#### 6.1 Kafka消费者组件的使用
+
+##### 6.1.1 Kafka消费者组件
+
+系统提供该功能，您可以利用Kafka消费者组件进行可视化开发，本节主要介绍Kafka消费者组件的简单使用流程。
+
+##### 6.1.2 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
