--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/1. Kafka消费者组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/1. Kafka消费者组件的使用.md
@@ -9,3 +9,11 @@
 ##### 6.1.2 前提条件
 
 a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+c）您需要提前创建好Kafka生产者及Kafka消费者的资源实例，创建方式见《SoFlu社区版基础操作指南[第10.1.6节](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#16-%E6%96%B0%E5%A2%9Ekafka%E7%94%9F%E4%BA%A7%E8%80%85%E8%B5%84%E6%BA%90)和[第10.1.7节](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#17-%E6%96%B0%E5%A2%9Ekafka%E6%B6%88%E8%B4%B9%E8%80%85%E8%B5%84%E6%BA%90)》。
+
+##### 6.1.3 操作步骤
+
+a）在项目管理页面中，选择“资源实例”，如图1-1所示：
