--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/1. Kafka消费者组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/1. Kafka消费者组件的使用.md
@@ -17,3 +17,13 @@ c）您需要提前创建好Kafka生产者及Kafka消费者的资源实例，创
 ##### 6.1.3 操作步骤
 
 a）在项目管理页面中，选择“资源实例”，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_11_3_01.png)
+
+##### 图1-1 选择资源实例
+
+b）单击“Kafka生产者”后的“+”，选择“新增资源实例”，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_11_6_02.png)
+
+##### 图1-2 新增资源实例
