--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/2. Kafka生产者组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/2. Kafka生产者组件的使用.md
@@ -1,1 +1,9 @@
-test
+### 6. 消息队列组件
+
+#### 6.2 Kafka生产者组件的使用
+
+##### 6.2.1 Kafka生产者组件
+
+系统提供该功能，您可以利用Kafka生产者组件进行可视化开发，本节主要介绍Kafka生产者组件的简单使用流程。
+
+##### 6.2.2 前提条件
