--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/2. Kafka生产者组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/2. Kafka生产者组件的使用.md
@@ -17,3 +17,13 @@ c）您需要提前创建好Kafka生产者及Kafka消费者的资源实例，创
 ##### 6.2.3 操作步骤
 
 a）新增一个接口，填写接口的基本信息，填写完成后，单击“下一步”，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_9_1_12.png)
+
+##### 图2-1 填写接口的基本信息
+
+a）新增一个接口，填写接口的基本信息，填写完成后，单击“下一步”，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_9_1_12.png)
+
+##### 图2-1 填写接口的基本信息
