--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/2. Kafka生产者组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/2. Kafka生产者组件的使用.md
@@ -57,3 +57,13 @@ e）同时拖拽一个输出结果组件，连接好组件的流程图，如图2
 f）选中Kafka生产者组件，单击“资源实例”处的选择记录方框，如图2-6所示：
 
 ![2-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_9_1_3.png)
+
+##### 图2-6 选择资源实例
+
+g）进入表格选择页面，双击选择已连接好的Kafka生产者资源，如图2-7所示：
+
+![2-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_9_1_4.png)
+
+##### 图2-7 选择Kafka生产者资源
+
+h）输入Kafka主题，如图2-8所示：
