--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/2. Kafka生产者组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/6. 消息队列组件/2. Kafka生产者组件的使用.md
@@ -75,3 +75,13 @@ h）输入Kafka主题，如图2-8所示：
 ##### 说明：Kafka生产者组件的主题就是Kafka消费者资源实例的Topic，进入“资源示例”模块，找到Kafka消费者资源，复制kafka消费者topic，在“输入Kafka主题”处粘贴即可，如图2-9所示：
 
 ![2-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_9_1_6.png)
+
+##### 图2-9 找到kafka消费者的topic
+
+i）单击“流程变量”处的录入参数方框，根据项目需求录入参数，如图2-10、2-11、2-12、2-13所示：
+
+##### 说明：此处仅以输入HelloWorld作为示例，您可以自行录入参数。
+
+![2-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_9_1_7.png)
+
+##### 图2-10 单击录入参数方框
