--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
@@ -1,1 +1,13 @@
-test
+### 7. 缓存组件
+
+#### 7.1 Redis组件的使用
+
+##### 7.1.1 Redis组件
+
+系统提供该功能，您可以利用Redis组件进行可视化开发，本节主要介绍Redis组件的简单使用流程。
+
+##### 7.1.2 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
