--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
@@ -11,3 +11,11 @@
 a）您需要拥有“接口管理”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+c）您需要提前创建好Redis缓存的资源实例，创建方式见[《SoFlu社区版基础操作指南第10.1.8节：新增redis缓存资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#18-%E6%96%B0%E5%A2%9Eredis%E7%BC%93%E5%AD%98%E8%B5%84%E6%BA%90)。
+
+##### 7.1.3 操作步骤
+
+##### 说明：本示例使用两个Redis组件和一个输出结果组件来完成。其中一个Redis组件用来放置List对象，另一个Redis组件用来查看Redis缓存中的内容，最后使用输出结果组件来引用第二个Redis组件的执行结果。
+
+a）新增一个接口，填写接口的基本信息，填写完成后，单击“下一步”，如图1-1所示：
