--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
@@ -19,3 +19,13 @@ c）您需要提前创建好Redis缓存的资源实例，创建方式见[《SoFl
 ##### 说明：本示例使用两个Redis组件和一个输出结果组件来完成。其中一个Redis组件用来放置List对象，另一个Redis组件用来查看Redis缓存中的内容，最后使用输出结果组件来引用第二个Redis组件的执行结果。
 
 a）新增一个接口，填写接口的基本信息，填写完成后，单击“下一步”，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_18.png)
+
+##### 图1-1 填写接口的基本信息
+
+b）进入配置入口参数页面，添加参数信息，添加完成后，单击“提交”，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_1.png)
+
+##### 图1-2 添加参数信息
