--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
@@ -39,3 +39,13 @@ c）进入模型页面，单击“进入模型编辑”，如图1-3所示：
 ##### 图1-3 模型页面
 
 d）进入窗体视图，找到“缓存”栏目下的Redis组件，拖拽两个至绘图面板，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_2.png)
+
+##### 图1-4 窗体视图
+
+e）同时拖拽一个输出结果组件，连接好组件的流程图，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_3.png)
+
+##### 图1-5 连接组件流程图
