--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
@@ -49,3 +49,13 @@ e）同时拖拽一个输出结果组件，连接好组件的流程图，如图1
 ![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_3.png)
 
 ##### 图1-5 连接组件流程图
+
+f）选中第一个Redis组件，单击“Redis信息”处的未选中记录方框，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_4.png)
+
+##### 图1-6 填写组件的基本信息
+
+g）进入填写数据页面，配置Redis实例名字，如图1-7、图1-8所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_5.png)
