--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
@@ -59,3 +59,15 @@ f）选中第一个Redis组件，单击“Redis信息”处的未选中记录方
 g）进入填写数据页面，配置Redis实例名字，如图1-7、图1-8所示：
 
 ![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_5.png)
+
+##### 图1-7 单击选择记录方框
+
+![1-8](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_6.png)
+
+##### 图1-8 双击选择Redis缓存资源
+
+h）配置Redis方法类型，如图1-9、1-10所示：
+
+![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_7.png)
+
+##### 图1-9 单击选择记录方框
