--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
@@ -71,3 +71,15 @@ h）配置Redis方法类型，如图1-9、1-10所示：
 ![1-9](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_7.png)
 
 ##### 图1-9 单击选择记录方框
+
+![1-10](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_8.png)
+
+##### 图1-10 双击选择Redis方法类型
+
+##### 说明：此处选择操作List对象。
+
+i）配置Redis方法，如图1-11、1-12所示：
+
+![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_9.png)
+
+##### 图1-11 单击选择记录方框
