--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
@@ -83,3 +83,15 @@ i）配置Redis方法，如图1-11、1-12所示：
 ![1-11](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_9.png)
 
 ##### 图1-11 单击选择记录方框
+
+![1-12](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_10.png)
+
+##### 图1-12 双击选择Redis方法
+
+##### 说明：此处选择新增List对象方法addList(String name, List<?> list)，用于添加List对象。
+
+j）对应Redis方法添加参数信息，如图1-13、1-14、1-15、1-16所示：
+
+![1-13](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_11.png)
+
+##### 图1-13 单击添加按钮
