--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/7. 缓存组件/1. Redis组件的使用.md
@@ -121,3 +121,21 @@ l）同理配置另一个Redis组件，如图1-17所示：
 m）选中输出结果组件，单击“响应结果”处的三等号按钮，双击选择一个响应结果。
 
 n）单击“输出项值”处的未选中记录方框，进入填写数据页面。
+
+o）在填写数据页面，单击字段值处的参数选择按钮，进入参数选择页面，如图1-18所示：
+
+![1-18](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_16.png)
+
+##### 图1-18 单击参数选择按钮
+
+p）在参数选择页面，选择第二个“Redis组件”页签，双击选择Redis组件的执行结果redisResult，如图1-19所示：
+
+![1-19](https://www.feisuanyz.com/fsimage/zc-image/cz_22_8_1_17.png)
+
+##### 图1-19 引用Redis组件的执行结果
+
+q）在填写数据页面，单击“确定”。
+
+r）流程图编辑完成后，单击“保存并退出”。
+
+s）最后提交并发布该接口即可。
