--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/8. 脚本语言组件/1. 第三方脚本组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/8. 脚本语言组件/1. 第三方脚本组件的使用.md
@@ -1,1 +1,13 @@
-test
+### 8. 脚本语言组件
+
+#### 8.1 第三方脚本组件的使用
+
+##### 8.1.1 第三方脚本组件
+
+系统提供该功能，您可以利用第三方脚本组件进行可视化开发，本节主要介绍第三方脚本组件的简单使用流程。
+
+##### 8.1.2 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
