--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/8. 脚本语言组件/1. 第三方脚本组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/8. 脚本语言组件/1. 第三方脚本组件的使用.md
@@ -11,3 +11,11 @@
 a）您需要拥有“接口管理”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+C）使用第三方脚本组件之前，您需要提前创建好第三方脚本信息，创建方式见《SoFlu社区版基础操作指南[第17.1节](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/17.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/1.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC.md#11-%E6%96%B0%E5%A2%9E%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC%E6%A8%A1%E5%9D%97)和[第17.2节](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/17.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/1.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC.md#12-%E6%96%B0%E5%A2%9Epython%E8%84%9A%E6%9C%AC)》。
+
+##### 8.1.3 操作步骤
+
+a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“脚本语言”栏目下，找到第三方脚本组件，拖拽至绘图面板，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_1.png)
