--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/8. 脚本语言组件/1. 第三方脚本组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/8. 脚本语言组件/1. 第三方脚本组件的使用.md
@@ -31,3 +31,15 @@ b）同时拖拽一个输出结果组件，连接好组件的流程图，如图1
 c）选中第三方脚本组件，根据项目需求填写组件的名称和描述（也可不用填写），如图1-3所示：
 
 ![1-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_3.png)
+
+##### 图1-3 填写组件的基本信息
+
+d）单击“第三方脚本执行信息”处的未选中记录方框，进入填写数据页面，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_4.png)
+
+##### 图1-4 单击未选中记录方框
+
+e）在填写数据页面，单击“脚本ID”处的选择记录方框，进入表格选择页面，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_5.png)
