--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/8. 脚本语言组件/1. 第三方脚本组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/8. 脚本语言组件/1. 第三方脚本组件的使用.md
@@ -53,3 +53,13 @@ f）在表格选择页面，双击选择您需要使用的脚本信息的脚本I
 ##### 图1-6 选择脚本ID
 
 ##### 说明：表格选择页面中的“脚本执行参数”用于设置执行脚本时需要的一些入参，非必填项，需要的脚本可以设置，不需要参数的就不用设置了；其中“超时时间”指的是脚本执行的超时时间，默认填写为60000毫秒，您也可以自行进行修改设置。
+
+g）配置完成后，单击“确定”退出填写数据页面。
+
+h）选中输出结果组件，单击“响应结果”处的三等号按钮，双击选择一个响应结果，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/zc-image/cz_22_7_1_9.png)
+
+##### 图1-7 选择响应结果
+
+i）单击“输出项值”处的未选中记录方框，进入填写数据页面，如图1-8所示：
