--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/1. FeignClient组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/1. FeignClient组件的使用.md
@@ -1,1 +1,11 @@
-test
+### 9. 通信组件
+
+#### 9.1 FeignClient组件的使用
+
+##### 9.1.1 FeignClient组件
+
+全自动开发平台提供了FeignClient组件，通过在HTTP通信的资源实例中配置对应接口所在项目的项目路径地址，无需配置IP地址，Nacos服务就会去寻找项目路径地址所部署的IP地址，并与请求地址拼接成完整的请求URL，这样就可以请求到其它接口的数据。若项目后续变更环境，也无需修改HTTP通信资源实例中的URL信息。
+
+本节将为您具体介绍如何使用FeignCient组件进行微服务调用。
+
+##### 9.1.2 前提条件
