--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/1. FeignClient组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/1. FeignClient组件的使用.md
@@ -9,3 +9,15 @@
 本节将为您具体介绍如何使用FeignCient组件进行微服务调用。
 
 ##### 9.1.2 前提条件
+
+项目中已加载好FeignClient组件、Nacos配置资源、Http通信资源，具体可参见[《SoFlu社区版快速入门教程第4.9节：如何加载资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#49-%E5%A6%82%E4%BD%95%E5%8A%A0%E8%BD%BD%E8%B5%84%E6%BA%90)。
+
+##### 9.1.3 操作步骤
+
+a）新增Nacos配置资源实例
+
+a1）进入全自动开发平台资源实例功能模块，新增Nacos配置资源实例，如图1-1、图1-2所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/zc-image/microservice/feignclient_4.png)
+
+##### 图1-1 进入资源实例功能模块
