--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/1. FeignClient组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/1. FeignClient组件的使用.md
@@ -33,3 +33,13 @@ a2）输入Nacos部署的IP地址加端口即可，如图1-3所示：
 ##### 图1-3 输入IP地址和端口
 
 b）新增Http通信资源实例
+
+b1）新增Http通信资源实例，填写调用接口所在项目的项目路径地址。
+
+##### 说明：若通过HTTP组件调用该资源实例，则填写IP地址。
+
+![1-4](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_11.png)
+
+##### 图1-4 新增Http通信资源实例
+
+c）接口编辑
