--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/1. FeignClient组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/1. FeignClient组件的使用.md
@@ -55,3 +55,13 @@ c2）选中FeignClient组件，Nacos资源实例名称处选择新增的Nacos配
 ![1-6](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_13.png)
 
 ##### 图1-6 选择新增的Nacos配置资源实例
+
+c3）配置HTTP的请求参数，HTTP的资源名称处选择新增的Http通信资源实例，剩下信息根据所需调用的接口来填写即可，如图1-7所示：
+
+##### 说明：其中返回文件流选项用于设置是否需要通过请求地址直接下载返回对应的文件，下载的文件一般为程序中已编写好的下载文件接口。
+
+![1-7](https://www.feisuanyz.com/fsimage/zc-image/zjsy/downfile_3.png)
+
+##### 图1-7 填写数据
+
+c4）选中输出结果组件，引用FeignClient组件的响应消息体来调用其它接口返回的信息，如图1-8所示：
