--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/1. FeignClient组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/1. FeignClient组件的使用.md
@@ -65,3 +65,13 @@ c3）配置HTTP的请求参数，HTTP的资源名称处选择新增的Http通信
 ##### 图1-7 填写数据
 
 c4）选中输出结果组件，引用FeignClient组件的响应消息体来调用其它接口返回的信息，如图1-8所示：
+
+![1-8](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_15.png)
+
+##### 图1-8 引用FeignClient组件的响应消息体
+
+c5）运行接口测试用例，查看是否调用成功，如图1-9所示：
+
+![1-9](https://www.feisuanyz.com/fsimage/zc-image/microservice/microservice_16.png)
+
+##### 图1-9 运行接口测试用例
