--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/2. HTTP组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/2. HTTP组件的使用.md
@@ -1,1 +1,11 @@
-test
+### 9. 通信组件
+
+#### 9.2 HTTP组件的使用
+
+##### 9.2.1 HTTP组件
+
+系统提供该功能，您可以利用HTTP组件进行可视化开发。HTTP组件用于调用http请求，本节主要介绍HTTP组件的简单使用流程。
+
+##### 9.2.2 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
