--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/2. HTTP组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/2. HTTP组件的使用.md
@@ -9,3 +9,13 @@
 ##### 9.2.2 前提条件
 
 a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+c）您需要提前创建好HTTP通信资源实例，创建方式见[《SoFlu社区版基础操作指南第10.1.9节：新增Http通信资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/10.%20%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md#19-%E6%96%B0%E5%A2%9Ehttp%E9%80%9A%E4%BF%A1%E8%B5%84%E6%BA%90)。
+
+##### 9.2.3 操作步骤
+
+a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“通信”栏目下，找到HTTP组件，拖拽至绘图面板，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_1.png)
