--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/2. HTTP组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/2. HTTP组件的使用.md
@@ -19,3 +19,15 @@ c）您需要提前创建好HTTP通信资源实例，创建方式见[《SoFlu社
 a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“通信”栏目下，找到HTTP组件，拖拽至绘图面板，如图2-1所示：
 
 ![2-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_1.png)
+
+##### 图2-1 找到HTTP组件
+
+b）同时拖拽一个输出结果组件，连接好组件的流程图，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_2.png)
+
+##### 图2-2 连接组件流程图
+
+C）选中HTTP组件，根据项目需求填写组件的名称和描述，如图2-3所示：
+
+![2-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_3.png)
