--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/2. HTTP组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/2. HTTP组件的使用.md
@@ -31,3 +31,15 @@ b）同时拖拽一个输出结果组件，连接好组件的流程图，如图2
 C）选中HTTP组件，根据项目需求填写组件的名称和描述，如图2-3所示：
 
 ![2-3](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_3.png)
+
+##### 图2-3 填写组件的基本信息
+
+d）单击“http请求参数”处未选中记录方框，如图2-4所示：
+
+![2-4](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_1_4.png)
+
+##### 图2-4 单击“http请求参数”
+
+e）根据接口实际需求，配置http请求参数，如图2-5所示：
+
+![2-5](https://www.feisuanyz.com/fsimage/zc-image/zjsy/downfile_1.png)
