--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/2. HTTP组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/2. HTTP组件的使用.md
@@ -43,3 +43,13 @@ d）单击“http请求参数”处未选中记录方框，如图2-4所示：
 e）根据接口实际需求，配置http请求参数，如图2-5所示：
 
 ![2-5](https://www.feisuanyz.com/fsimage/zc-image/zjsy/downfile_1.png)
+
+##### 图2-5 配置http请求参数
+
+##### 说明：
+
+e1）所有参数根据实际需求填写，此处示例的http请求暂不用填写这些参数。
+
+e2）不对请求地址进行编码选项的作用是http组件发送请求时，是否要对URL进行UrlEncode编码处理。系统默认会对http请求进行UrlEncode编码处理，若不需要进行编码处理，将按钮打开即可。
+
+e3）返回文件流选项用于设置是否需要通过请求地址直接下载返回对应的文件，下载的文件一般为程序中已编写好的下载文件接口。
