--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/3. TCP协议客户端组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/3. TCP协议客户端组件的使用.md
@@ -1,1 +1,15 @@
-test
+### 9. 通信组件
+
+#### 9.3 TCP协议客户端组件的使用
+
+##### 9.3.1 TCP协议客户端组件
+
+全自动开发平台提供TCP协议客户端组件，通过使用该组件，用户可以调用指定IP地址、指定端口的TCP接口进行信息通信。本节将为您具体介绍如何使用TCP协议客户端组件。
+
+##### 9.2.2 操作步骤
+
+a）进入全自动开发平台项目加载项页面，选择“组件 > 通信”，添加“TCP协议客户端组件”，单击“加载应用”即可，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_12.png)
+
+##### 图3-1 项目加载项页面
