--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/3. TCP协议客户端组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/3. TCP协议客户端组件的使用.md
@@ -49,3 +49,19 @@ g）提交并发布接口，如图3-5所示：
 ##### 图3-5 发布接口
 
 h）对接口进行测试用例，如图3-6所示：
+
+![3-6](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_17.png)
+
+##### 图3-6 使用测试用例
+
+i）勾选测试用例，单击“执行”即可。如图3-7所示：
+
+![3-7](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_18.png)
+
+##### 图3-7 单击执行
+
+j）查看测试用例结果，如图3-8所示：
+
+![3-8](https://www.feisuanyz.com/fsimage/zc-image/28tcp/tcp_19.png)
+
+##### 图3-8 查看测试用例结果
