--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
@@ -1,1 +1,13 @@
-test
+### 9. 通信组件
+
+#### 9.4 客户端通信组件的使用
+
+##### 9.4.1 客户端通信组件
+
+客户端通信组件主要用于支持WebSocket协议，实现服务端主动向客户端推送消息。本节将通过具体案例来介绍如何利用客户端通信组件实现消息的主动推送。
+
+##### 说明：WebSocket协议是一种在单个TCP连接上进行全双工通信的协议，它允许服务端主动向客户端推送数据，客户端和服务端只需要完成一次握手，两者之间就可以创建持久性的连接并双向传输数据，这使得客户端和服务端之间的数据交换变得更加简单。
+
+##### 9.4.2 结果展示
+
+案例主要是通过服务端主动向客户端推送计数变量值，实现一个倒计时的效果，如下图所示：
