--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
@@ -11,3 +11,13 @@
 ##### 9.4.2 结果展示
 
 案例主要是通过服务端主动向客户端推送计数变量值，实现一个倒计时的效果，如下图所示：
+
+![4-1](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_8.png)
+
+##### 图4-1 倒计时效果
+
+##### 9.4.3 流程图展示
+
+案例主要是通过服务端主动向客户端推送计数变量值，实现一个倒计时的效果，如下图所示：
+
+![4-2](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_7.png)
