--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
@@ -21,3 +21,15 @@
 案例主要是通过服务端主动向客户端推送计数变量值，实现一个倒计时的效果，如下图所示：
 
 ![4-2](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_7.png)
+
+##### 图4-2 流程图展示
+
+##### 9.4.4 操作步骤
+
+a）为项目添加客户端通信组件加载项，如图4-3所示：
+
+![4-3](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_1.png)
+
+##### 图4-3 添加客户端通信组件加载项
+
+b）新增一个接口，接口协议选择WebSocket，如图4-4所示：
