--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
@@ -33,3 +33,17 @@ a）为项目添加客户端通信组件加载项，如图4-3所示：
 ##### 图4-3 添加客户端通信组件加载项
 
 b）新增一个接口，接口协议选择WebSocket，如图4-4所示：
+
+![4-4](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_2.png)
+
+##### 图4-4 新增接口
+
+c）配置接口的入口参数，本实例需要添加计数变量a，如图4-5所示：
+
+![4-5](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_9.png)
+
+##### 图4-5 添加计数变量
+
+d）通过拖、拽、拉的方式进行模型编辑（即流程图编辑），需注意关键的组件客户端通信组件，如图4-6所示：
+
+![4-6](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_10.png)
