--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
@@ -47,3 +47,15 @@ c）配置接口的入口参数，本实例需要添加计数变量a，如图4-5
 d）通过拖、拽、拉的方式进行模型编辑（即流程图编辑），需注意关键的组件客户端通信组件，如图4-6所示：
 
 ![4-6](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_10.png)
+
+##### 图4-6 进行模型编辑
+
+e）接下来将对组件的具体配置进行展示。
+
+e1）计数器组件【录入计数变量、实现逐次递减】：用于引用计数变量，并实现计数变量的逐次递减。计数器组件的循环流程变量选择入口参数计数变量a，操作符选择递减，如图4-7、图4-8所示：
+
+![4-8](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_11.png)
+
+##### 图4-8 计数器组件
+
+![4-9](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_13.png)
