--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
@@ -59,3 +59,13 @@ e1）计数器组件【录入计数变量、实现逐次递减】：用于引用
 ##### 图4-8 计数器组件
 
 ![4-9](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_13.png)
+
+##### 图4-9 选择入口参数计数变量a
+
+e2）互斥条件组件【判断计数变量是否大于0】：用于判断计数变量的值是否大于0，若大于0，则通过客户端通信组件主动推送计数变量的值，若小于等于0，则结束程序，两条顺序流的流转条件的设置如图所示：
+
+![4-10](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_15.png)
+
+##### 图4-10 互斥条件组件
+
+![4-11](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_16.png)
