--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
@@ -113,3 +113,15 @@ e5）客户端通信组件【建立连接、主动推送数据】：用于与web
 ![4-20](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_21.png)
 
 ##### 图4-20 客户端通信组件
+
+![4-21](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_23.png)
+
+##### 图4-21 配置接口参数
+
+![4-22](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_25.png)
+
+##### 图4-22 录入计数变量
+
+f）完成流程图编辑之后，保存并退出。
+
+g）提交并发布接口。
