--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/4. 客户端通信组件的使用.md
@@ -125,3 +125,15 @@ e5）客户端通信组件【建立连接、主动推送数据】：用于与web
 f）完成流程图编辑之后，保存并退出。
 
 g）提交并发布接口。
+
+h）编辑测试用例，录入计数变量的值，如图4-23所示：
+
+![4-23](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_31.png)
+
+##### 图4-23 编辑测试用例
+
+i）执行测试用例，查看测试用例的结果，可以看到响应内容为计数变量的值，如图4-24所示：
+
+![4-24](https://www.feisuanyz.com/fsimage/zc-image/jkgl/websock_32.png)
+
+##### 图4-24 查看测试用例结果
