--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/5. 请求响应参数管理组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/5. 请求响应参数管理组件的使用.md
@@ -1,1 +1,27 @@
-test
+### 9. 通信组件
+
+#### 9.5 请求响应参数管理组件的使用
+
+##### 9.5.1 请求响应参数管理组件
+
+请求响应管理参数组件用于获取请求参数或者响应参数中的某个字段值，然后在后续的流程图编辑中选择请求响应参数组件的值来作为入参。
+
+##### 9.5.2 前提条件
+
+a）您需要拥有“接口管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+##### 9.5.3 操作步骤
+
+a）进入流程编辑页面，在窗体视图左侧的“组件列表”中“通信”栏目下，找到请求响应参数管理组件，拖至窗体视图，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_2_1.png)
+
+##### 图5-1 找到请求响应参数管理组件
+
+b）连接好组件的流程图，选中请求响应参数管理组件，根据项目需求填写组件的名称和描述，如图5-2所示：
+
+![5-2](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_2_3.png)
+
+##### 图5-2 填写基本信息
