--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/5. 请求响应参数管理组件的使用.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版组件使用案例/9. 通信组件/5. 请求响应参数管理组件的使用.md
@@ -51,3 +51,13 @@ g）双击选择输出结果信息。
 h）单击“输出项值”处未选中记录方框，进入填写数据页面。
 
 i）单击参数选择按钮，给data字段配置字段值。
+
+j）进入参数选择页面，选择“请求响应参数管理组件”页签，双击选择“executeMethodResult”引用组件的执行结果，如图5-6所示：
+
+![5-6](https://www.feisuanyz.com/fsimage/zc-image/cz_22_5_2_7.png)
+
+##### 图5-6 选择执行结果
+
+k）流程图编辑完成后，单击“保存并退出”。
+
+l）最后提交并发布该接口即可。
