--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/1. 通用插件/2. 自定义拦截器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/1. 通用插件/2. 自定义拦截器.md
@@ -1,1 +1,56 @@
-test
+### 1. 通用插件
+
+#### 1.2 自定义拦截器
+
+拦截器的定义需要按照以下方式进行，然后存放到项目中的` resources `目录下名为` plugins.xml `的文件中，并一起打成` jar `包上传到平台即可。
+
+##### 1.2.1 前提条件
+
+自定义插件需要下载如下Demo工程包和开发辅助工具，具体如下：
+
+a）插件Demo工程包下载地址：demo-plugin.zip
+
+b）下载开发辅助工具：在全自动开发平台中，单击右上角下载开发辅助工具，如图2-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/gj-image/gj_0000_img.png)
+
+##### 图1-1 下载开发辅助工具
+
+##### 1.3.1 操作步骤
+
+a）在pom文件中增加依赖包。
+
+包名：` com.feisuanyz.flow.core.cmpt.interceptor.FlowInterceptor `
+
+类名：` FlowInterceptor `
+
+```
+<dependency>
+     <groupId>com.feisuanyz.flow</groupId>
+     <artifactId>flow-core-cmpt</artifactId>
+     <version>${version}</version>
+     <scope>provided</scope>
+     <systemPath>${开发辅助工具路径}/flow-core-cmpt-${version}.jar</systemPath>
+</dependency>
+
+```
+b）实现FlowInterceptor接口。
+
+包名：` com.feisuanyz.flow.core.cmpt.interceptor.FlowInterceptor `
+
+类名：` FlowInterceptor `
+
+实现方法：
+
+```
+/** 
+* <p>
+* 	 拦截器操作需要在该方法中实现
+* </p>
+*/
+@Override
+public boolean preHandle(HttpServletRequest httpServletRequest, HttpServletResponse httpServletResponse) 
+@Override
+public void afterCompletion(HttpServletRequest httpServletRequest, HttpServletResponse httpServletResponse, Map<String, Object> map)
+
+```
