--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/1. 通用插件/2. 自定义拦截器.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/1. 通用插件/2. 自定义拦截器.md
@@ -54,3 +54,16 @@ public boolean preHandle(HttpServletRequest httpServletRequest, HttpServletRespo
 public void afterCompletion(HttpServletRequest httpServletRequest, HttpServletResponse httpServletResponse, Map<String, Object> map)
 
 ```
+
+c）对自定义的拦截器打jar包。
+
+将开发完的接口存放到项目中的` resources `目录下名为` plugins.xml `的文件中并一起打成jar包，生成如下类似文件：
+
+```
+demo-plugin-1.0.0.jar
+demo-plugin-1.0.0.pom
+```
+
+d）将生成的` demo-plugin-1.0.0.jar `和` demo-plugin-1.0.0.pom `压缩成一个zip包上传到平台即可。
+
+##### 说明：如何导入自定义插件，请参见[《SoFlu社区版基础操作指南第3章：插件中心》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%8F%92%E4%BB%B6%E4%B8%AD%E5%BF%83/%E6%8F%92%E4%BB%B6%E4%B8%AD%E5%BF%83.md)。
