Update 2. SQL 配置化增加逻辑标签.md

--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
@@ -1,1 +1,17 @@
-test
+### 2. SQL 配置化增加逻辑标签
+
+#### 2.1 SQL 配置化增加逻辑标签
+
+SQL配置化增加逻辑标签功能的目的就是为了消除在平台开发接口中拼接SQL语句这种很不便于维护的方式，有利于优化产品的功能。
+
+#### 2.2 if 标签
+
+if标签是用来做判断用的，条件成立则会将标签中的内容追加到SQL语句中` where `条件部分，条件不成立则会跳过不追加此处的内容到SQL语句中。
+
+##### 2.2.1 test 属性
+
+##### 样例：
+
+```
+<if test="beginTime != null">
+    and createTime &gt;= #{beginTime}
