Update 2. SQL 配置化增加逻辑标签.md

--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
@@ -15,3 +15,24 @@ if标签是用来做判断用的，条件成立则会将标签中的内容追加
 ```
 <if test="beginTime != null">
     and createTime &gt;= #{beginTime}
+</if>
+<if test="endTime != null">
+    and createTime &lt;= #{endTime}
+</if>
+```
+
+##### 说明：
+
+test属性中的内容就是ognl表达式，是用来判断表达式是否成立的。
+
+##### 2.2.2 direction 属性
+
+##### 样例：
+
+```
+<if test="registerIp != null and registerIp != ''" direction="left">
+      and registerIp like #{registerIp}
+</if>
+```
+
+##### 说明：
