--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
@@ -36,3 +36,18 @@ test属性中的内容就是ognl表达式，是用来判断表达式是否成立
 ```
 
 ##### 说明：
+
+direction属性是专门为SQL中的like子句定制的，if标签中包含有direction属性则代表此处if标签中的内容是一个like子句，后端程序在处理时就会为参数加上模糊匹配标识符` “%” `，使用时根据实际情况为direction属性指定合适的值。
+
+```
+direction属性的值规定有3个，分别是：
+  LEFT   ("left","左匹配")    -> 例如：XXX%
+  RIGHT  ("right","右匹配")   -> 例如：%XXX
+  ALL    ("all","全局匹配")   -> 例如：%XXX%
+```
+
+##### 注意：当direction属性的值为null或空字符串时direction=""，则不会给参数加上模糊匹配符“%”，会将其当做一个普通的if标签来处理（只是替换参数）。
+
+#### 2.3 foreach 标签
+
+foreach标签时专门为` where `条件部分的` in `子句和` not in `子句定制的，其也包含if标签中的test属性用来做判断，只有条件成立时才会处理foreach中的内容并将其追加到SQL当中。
