Update 2. SQL 配置化增加逻辑标签.md

--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
@@ -51,3 +51,24 @@ direction属性的值规定有3个，分别是：
 #### 2.3 foreach 标签
 
 foreach标签时专门为` where `条件部分的` in `子句和` not in `子句定制的，其也包含if标签中的test属性用来做判断，只有条件成立时才会处理foreach中的内容并将其追加到SQL当中。
+
+##### 2.3.1 test 属性
+
+##### 样例：
+
+```
+<if test="beginTime != null">
+    and createTime &gt;= #{beginTime}
+</if>
+<if test="endTime != null">
+    and createTime &lt;= #{endTime}
+</if>
+```
+
+##### 说明：
+
+test属性中的内容就是ognl表达式，是用来判断表达式是否成立的。
+
+##### 2.3.2 表达式中的属性
+
+##### 样例：
