--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
@@ -72,3 +72,24 @@ test属性中的内容就是ognl表达式，是用来判断表达式是否成立
 ##### 2.3.2 表达式中的属性
 
 ##### 样例：
+
+```
+<foreach test="userName != null">
+  and userName in (#{userName})
+</foreach>
+<foreach test="phoneNumber != null">
+  and phoneNumber not in (#{phoneNumber})
+</foreach>
+```
+
+##### 说明：
+
+对于foreach标签test属性中的表达式中用来做判断的属性（例如上面标签表达式中的` userName `、` phoneNumber `）的值的类型是有特定规定的。由于会根据其值来构造出` in `子句或` not in `子句中的` “?” `部分以及收集参数，所以其值的类型只能是` List `、` Set `和` Array `。
+
+#### 2.4 for 标签
+
+for标签时专门用于对集合进行遍历。
+
+for标签的功能非常强大，它允许你指定一个集合，声明可以在标签体内使用的集合项（item）和索引（index）变量。它也允许你指定开头与结尾的字符串以及集合项迭代之间的分隔符。
+
+可以将任何可迭代对象（如 List、Set 等）、Map 对象或者数组对象作为集合参数传递给for。当使用可迭代对象或者数组时，index 是当前迭代的序号，item的值是本次迭代获取到的元素。当使用 Map 对象（或者Map.Entry对象的集合）时，index是键，item是值。
