--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
@@ -93,3 +93,29 @@ for标签时专门用于对集合进行遍历。
 for标签的功能非常强大，它允许你指定一个集合，声明可以在标签体内使用的集合项（item）和索引（index）变量。它也允许你指定开头与结尾的字符串以及集合项迭代之间的分隔符。
 
 可以将任何可迭代对象（如 List、Set 等）、Map 对象或者数组对象作为集合参数传递给for。当使用可迭代对象或者数组时，index 是当前迭代的序号，item的值是本次迭代获取到的元素。当使用 Map 对象（或者Map.Entry对象的集合）时，index是键，item是值。
+
+##### 样例：
+
+```
+ SELECT autoIndex, userId, userName FROM user_userinfo 
+        where 1=1
+        <if test="list != null and list.size > 0">
+            and autoIndex IN		
+            <for item="item" index="index" collection="list" open="("
+                separator="," close=")">
+                #{item}
+            </for>
+        </if>
+```
+
+##### 2.4.1 属性说明
+
+a）item：本次迭代获取到的元素
+
+b）index：当前迭代的序号
+
+c）collection：任何可迭代对象（如 List、Set 等）、Map对象或者数组对象
+
+d）open：开头的字符串
+
+e）separator：集合项迭代之间的分隔符
