--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
@@ -119,3 +119,28 @@ c）collection：任何可迭代对象（如 List、Set 等）、Map对象或者
 d）open：开头的字符串
 
 e）separator：集合项迭代之间的分隔符
+
+f）close：结尾的字符串
+
+#### 2.5 include 标签
+
+include是用来将SQL中公共的部分（包括查询的列和条件部分等）包裹起来以便其他SQL块重复使用。
+
+##### 2.5.1 refid 属性
+
+##### 样例
+
+```
+SELECT 
+<include refid="test_ognl_alpha_clauses"/>
+FROM user_userinfo
+where 1=1
+  and email = #{email}
+  and tradePassWord = '123456'
+  and cityNo &gt;=1 and cityNo &lt;= 100
+<if test="isOpenFingerPay != null and isOpenFingerPay != '' and isValid != null and isValid != ''">
+    and isOpenFingerPay = #{isOpenFingerPay} and isValid = #{isValid}
+    and isIdentical = #{isIdentical}
+</if>
+<include refid="test_ognl_alpha_where"/>
+order by autoIndex ASC limit 10
