Update 2. SQL 配置化增加逻辑标签.md

--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
@@ -170,3 +170,41 @@ order by autoIndex ASC limit 10
         </if>
 </sqlmapping>
 ```
+
+##### 说明：
+
+refid属性是用来表示所引用的SQL块` <sqlmapping>xxx</sqlmapping> `的id属性的值的。
+
+#### 2.6 逻辑标签嵌套使用
+
+上述三个逻辑标签除了单独使用以外，其中` if `和` foreach `标签还可以用来嵌套使用。` if `和` foreach `标签中还可以包含` if `、` foreach `和` include `标签，并且不限层级次数，可以无限次、无止境的嵌套。具体用法如下所示。
+
+##### 2.6.1 if 嵌套使用
+
+##### 样例：
+
+```
+<sqlmapping id="test_ognl_nestification" desc="sql配置化支持逻辑标签嵌套测试">	SELECT 
+    <include refid="test_ognl_alpha_clauses"/>
+    FROM user_userinfo
+    where 1=1
+      and email = #{email}
+      and tradePassWord = '123456'
+      and cityNo &gt;=1 and cityNo &lt;= 100
+    <if test="isOpenFingerPay != null and isOpenFingerPay != '' and isValid != null and isValid != ''">
+        and isOpenFingerPay = #{isOpenFingerPay} and isValid = #{isValid}
+        and isIdentical = #{isIdentical}
+        <if test="isOpenFingerPay != null and isOpenFingerPay != '' and isValid != null and isValid != ''">
+            and isOpenFingerPay = #{isOpenFingerPay} and isValid = #{isValid}
+            and isIdentical = #{isIdentical}
+        </if>
+        <foreach test="phoneNumber != null">
+            and phoneNumber not in (#{phoneNumber})
+        </foreach>
+        <include refid="test_ognl_alpha_where"/>
+    </if>
+    <include refid="test_ognl_alpha_where"/>
+    order by autoIndex ASC limit 10
+</sqlmapping>
+
+```
