Update 2. SQL 配置化增加逻辑标签.md

--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
@@ -237,3 +237,53 @@ refid属性是用来表示所引用的SQL块` <sqlmapping>xxx</sqlmapping> `的i
     order by autoIndex ASC limit 10
 </sqlmapping>
 ```
+
+##### 2.6.3 多层次嵌套使用
+
+##### 样例：
+
+```
+<sqlmapping id="test_ognl_nestification_2" desc="sql配置化支持逻辑标签嵌套测试">		SELECT * FROM user_userinfo
+        where 1=1
+        <if test="true">
+            <if test="true">
+                and 1 =1
+                <if test="true">
+                    and 1 =1
+                    <if test="true">
+                        and 1 =1
+                        <if test="true">
+                            and 1 =1
+                            <if test="true">
+                                and 1 =1
+                                <if test="true">
+                                    and 1 =1
+                                </if>
+                                <include refid="test_ognl_nestification_recursion" />
+                            </if>
+                        </if>
+                    </if>
+                </if>
+            </if>
+            <foreach test="true">
+                and 1 =1
+                <if test="true">
+                    <if test="true">
+                        and 1 =1
+                        <if test="true">
+                            and 1 =1
+                            <if test="true">
+                                and 1 =1
+                                <if test="true">
+                                    and 1 =1
+                                </if>
+                                <include refid="test_ognl_nestification_recursion" />
+                            </if>
+                        </if>
+                    </if>
+                </if>
+            </foreach>
+        </if>
+        order by autoIndex ASC limit 10
+</sqlmapping>
+    
