Update 2. SQL 配置化增加逻辑标签.md

--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
@@ -287,3 +287,34 @@ refid属性是用来表示所引用的SQL块` <sqlmapping>xxx</sqlmapping> `的i
         order by autoIndex ASC limit 10
 </sqlmapping>
     
+<sqlmapping id="test_ognl_nestification_recursion" desc="逻辑标签嵌套递归判断拼接SQL语句">
+        <if test="true">
+            and 1 = 1
+            <if test="true">
+                and 1 = 1
+                <if test="true">
+                    <if test="true">
+                        <if test="true">
+                            <if test="true">
+                                <if test="true">
+                                    <if test="true">
+                                        <if test="true">
+                                            <if test="true">
+                                                <if test="true">
+                                                    <if test="true">
+                                                        and 1 = 1
+                                                    </if>
+                                                </if>
+                                            </if>
+                                        </if>
+                                    </if>
+                                </if>
+                            </if>
+                        </if>
+                    </if>
+                </if>
+            </if>
+        </if>
+</sqlmapping>
+
+```
