--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/2. SQL 配置化增加逻辑标签.md
@@ -318,3 +318,27 @@ refid属性是用来表示所引用的SQL块` <sqlmapping>xxx</sqlmapping> `的i
 </sqlmapping>
 
 ```
+
+#### 2.7 参数绑定
+
+在使用逻辑标签时，SQL中的参数绑定采用和MyBatis一样的方式，统一采用` #{property} `的格式来为SQL中的变量绑定参数。
+
+##### 说明：
+
+当SQL块中有使用逻辑标签时，即便是静态语句（固定的条件部分，不需要通过逻辑标签来判断拼接）部分要设定参数也要使用#{property}的方式来为变量绑定参数。
+
+##### 样例：
+
+```
+SELECT 
+<include refid="test_ognl_alpha_clauses"/>
+FROM user_userinfo
+where 1=1
+  and email = #{email}
+  and tradePassWord = '123456'
+  and cityNo &gt;=1 and cityNo &lt;= 100
+<if test="isOpenFingerPay != null and isOpenFingerPay != '' and isValid != null and isValid != ''">
+    and isOpenFingerPay = #{isOpenFingerPay} and isValid = #{isValid}
+    and isIdentical = #{isIdentical}
+</if>
+```
