--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -1,1 +1,17 @@
-test
+### 3. 自定义函数
+
+#### 3.1 自定义函数
+
+函数，也就是类似于工具类，用户可以将编写好的函数打包为一个Jar包，然后上传到平台即可。
+
+#### 3.1.1 if 标签
+
+自定义函数需要下载如下Demo工程包和开发辅助工具，具体如下：
+
+a）函数Demo工程包下载地址：demo-function.zip
+
+b）下载开发辅助工具：在全自动开发平台中，单击右上角下载开发辅助工具，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/gj-image/gj_0000_img.png)
+
+##### 图1-1 下载开发辅助工具
