--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -39,3 +39,26 @@ a1）MethodDesc
  * @copyright 2020 www.feisuanyz.com Inc. All rights reserved.
 */
 package com.feisuanyz.flow.core.cmpt.annotation.function;
+
+import java.lang.annotation.Documented;
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Inherited;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+/**   
+ * <p>
+ *   函数(方法)信息描述注解
+ * <p>
+ * 	用来对类中的方法(函数)进行描述。
+ * 
+ * @author 飞算云智
+ * @date yyyy-mm-dd HH:mm
+ */
+@Target(ElementType.METHOD)
+@Retention(RetentionPolicy.RUNTIME)
+@Inherited
+@Documented
+public @interface MethodDesc {
+    
