--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -62,3 +62,29 @@ import java.lang.annotation.Target;
 @Documented
 public @interface MethodDesc {
     
+    /** 
+     * <p>
+     * 	 方法描述
+     * </p>
+     * @return String 
+     */
+    String desc();
+    
+    /** 
+     * <p>
+     * 	 参数描述信息列表
+     * </p>
+     * @return ParamDesc[] 
+     */
+    ParamDesc[] params();
+
+}
+```
+
+a2）ParamDesc
+
+```
+com.feisuanyz.flow.core.cmpt.annotation.function.ParamDesc
+```
+
+```
