--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -88,3 +88,33 @@ com.feisuanyz.flow.core.cmpt.annotation.function.ParamDesc
 ```
 
 ```
+/* 
+ * All rights Reserved, Designed By www.feisuanyz.com
+ * @title     ParamDesc.java   
+ * @package   com.feisuanyz.flow.core.cmpt.annotation.function   
+ * @version   V1.0 
+ * @copyright 2020 www.feisuanyz.com Inc. All rights reserved. 
+ */
+package com.feisuanyz.flow.core.cmpt.annotation.function;
+
+import java.lang.annotation.Documented;
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Inherited;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+/**   
+ * <p>
+ *   函数参数描述注解
+ * <p>
+ * 	用来对函数中的参数进行描述。
+ * 
+* @author 飞算云智
+ * @date yyyy-mm-dd HH:mm
+ */
+@Target(ElementType.METHOD)
+@Retention(RetentionPolicy.RUNTIME)
+@Inherited
+@Documented
+public @interface ParamDesc {
