--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -118,3 +118,36 @@ import java.lang.annotation.Target;
 @Inherited
 @Documented
 public @interface ParamDesc {
+
+    /** 
+     * <p>
+     * 	 参数名称
+     * </p>
+     * @return String 
+     */
+    String name();
+    
+    /** 
+     * <p>
+     * 	 参数描述
+     * </p>
+     * @return String 
+     */
+    String desc();
+}
+```
+
+使用示例：
+
+```
+/* 
+ * All rights Reserved, Designed By www.feisuanyz.com
+ * @title     Calculator.java   
+ * @package   com.feisuanyz.ops.function  
+ * @version   V1.0 
+ * @copyright 2020 
+ */
+package com.feisuanyz.ops.function;
+
+import com.feisuanyz.flow.core.cmpt.annotation.function.MethodDesc;
+import com.feisuanyz.flow.core.cmpt.annotation.function.ParamDesc;
