--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -151,3 +151,40 @@ package com.feisuanyz.ops.function;
 
 import com.feisuanyz.flow.core.cmpt.annotation.function.MethodDesc;
 import com.feisuanyz.flow.core.cmpt.annotation.function.ParamDesc;
+
+/**   
+ * <p>
+ *   计算器
+ * </p>
+* @author 飞算云智
+ * @date yyyy-mm-dd HH:mm
+ */
+public final class Calculator {
+    
+    private Calculator() {
+    }
+    
+    /** 
+     * <p>
+     * 	 两个数相加
+     * </p>
+     * @param a
+     * @param b
+     * @return int 
+     */
+    @MethodDesc(desc = "两个数相加", params = {
+        @ParamDesc(name = "a", desc = "参数a"),
+        @ParamDesc(name = "b", desc = "参数b")
+    })
+    public static int add(int a, int b) {
+        return a + b;
+    }
+    
+    /** 
+     * <p>
+     * 	 两个数相减
+     * </p>
+     * @param a
+     * @param b
+     * @return int 
+     */
