--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -188,3 +188,19 @@ public final class Calculator {
      * @param b
      * @return int 
      */
+    @MethodDesc(desc = "两个数相减", params = {
+        @ParamDesc(name = "a", desc = "参数a"),
+        @ParamDesc(name = "b", desc = "参数b")
+    })
+    public static int subtract(int a, int b) {
+        return a - b;
+    }
+```
+
+b）编写XML定义文件
+
+函数的定义需要按照以下xml格式进行描述，然后存放到项目中的` resources `目录下名为` functions.xml `的文件中，并一起打成Jar包上传到平台即可。
+
+##### 注意：目前如果某个函数类不用了，XML定义文件中配置的类信息以及函数类Java源文件不能删除，还是要继续保留着，不然上传Jar包时检查不通过会报错——会检查DB中此Jar包上一个版本包含的类数量和正在上传版本中所配置的类数量是否匹配（是否匹配是通过name属性来判断的，name属性值相同则认为DB中的类还存在于正在上传Jar包的配置中，否则认为不存在）。所以最好不要修改name属性的值。
+
+XML文件示例如下：
