--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -204,3 +204,16 @@ b）编写XML定义文件
 ##### 注意：目前如果某个函数类不用了，XML定义文件中配置的类信息以及函数类Java源文件不能删除，还是要继续保留着，不然上传Jar包时检查不通过会报错——会检查DB中此Jar包上一个版本包含的类数量和正在上传版本中所配置的类数量是否匹配（是否匹配是通过name属性来判断的，name属性值相同则认为DB中的类还存在于正在上传Jar包的配置中，否则认为不存在）。所以最好不要修改name属性的值。
 
 XML文件示例如下：
+
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<functions>
+<!-- Explain: 函数信息XML定义 
+    name: 函数名称 (函数名称只能以大写英文开头，包含英文、数字 、下划线 1-50位)
+    classpath: 函数类路径 (不能为空)
+    desc: 函数描述 (不能为空)
+-->
+<function name="Fun_Calculator" classpath="com.feisuanyz.ops.function.Calculator" desc="计算器" />
+<function name="Fun_Validator" classpath="com.feisuanyz.ops.function.Validator" desc="验证器" />
+</functions>
+```
