--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -217,3 +217,21 @@ XML文件示例如下：
 <function name="Fun_Validator" classpath="com.feisuanyz.ops.function.Validator" desc="验证器" />
 </functions>
 ```
+
+c）配置Jar包依赖。
+
+在定义函数时，函数Jar包的pom文件中所依赖的第三方Jar包必须遵守以下约定：
+
+c1）引用` flow-core-cmptJar `包时，必须为其指定范围为` provided `，因为系统在启动时也会自动依赖此Jar包，因此用户定义的Jar包只要能够解决编译依赖即可，不需要强行引入。如果强行引入，那么在函数Jar包导入时在对函数上面的注释注解进行校验检查时则会报错，无法识别，检查不通过。
+
+正确的示例如下：
+
+```
+<dependency>
+     <groupId>com.feisuanyz.flow</groupId>
+     <artifactId>flow-core-cmpt</artifactId>
+     <version>${version}</version>
+     <scope>provided</scope>
+     <systemPath>${开发辅助工具路径}/flow-core-cmpt-${version}.jar</systemPath>
+</dependency>
+```
