--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -235,3 +235,25 @@ c1）引用` flow-core-cmptJar `包时，必须为其指定范围为` provided `
      <systemPath>${开发辅助工具路径}/flow-core-cmpt-${version}.jar</systemPath>
 </dependency>
 ```
+
+c2）引用的所有Jar包都必须明确为其指定版本号，不然在对函数进行校验检查时可能会报` java.lang.ClassNotFoundException `问题。也可以将Jar包的版本号配置在` <properties>xxx</properties> `节点中，然后引用。
+
+正确的示例如下：
+
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.feisuanyz.ops</groupId>
+    <artifactId>jar-fdops-fun</artifactId>
+    <packaging>jar</packaging>
+    <name>jar-fdops-fun</name>
+    <description>Function Jar</description>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <flow-core-cmpt.version>2.0.26</flow-core-cmpt.version>
+    </properties>
