--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版高阶专题/3. 自定义函数.md
@@ -257,3 +257,23 @@ c2）引用的所有Jar包都必须明确为其指定版本号，不然在对函
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <flow-core-cmpt.version>2.0.26</flow-core-cmpt.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.feisuanyz.flow</groupId>
+            <artifactId>flow-core-cmpt</artifactId>
+            <version>${flow-core-cmpt.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+    </plugin>
+  </plugins>
+</build>
+</project>
+```
